# wickstrom.tech

./: .gitignore  .nvim.lua  2017-06-05-tagless-final-encoding-of-a-test-language.lhs  2017-11-10-finite-state-machines-part-1-modeling-with-haskell.lhs  2017-11-19-finite-state-machines-part-2.lhs  404.html  CNAME.old  LICENSE  Makefile  README.md  _config.yml  about.md  archive.html  build-feed.sh  build-index.sh  cabal.project  devenv.nix  flake.nix  func-da-world.cabal  generate-redirects.sh  hie.yaml  index.html  main.css  package-lock.json  shell.nix  stack.yaml  watch.sh  wickstrom-tech.cabal
.claude/: settings.local.json
.github/workflows/: BrokenLinks.spec.purs  build.yml  quickstrom.yml
_includes/: footer.html  head.html  header.html  load-css.html  mathjax.html  nav-items.html  nav.html
_layouts/: category.html  default.html  page.html  post.html
_plugins/: Lilypond.rb
_posts/: 2016-04-14-so-it-begins.markdown  2016-04-15-the-case-for-case.md  2016-04-19-a-faster-test-workflow-for-haskell.md  2016-04-23-software-evolution-without-fear.md  2016-05-15-paramount-color-scheme-for-vim.md  2016-07-10-custom-formatting-in-html-and-latex-code-listings-using-pandoc.md  2016-08-02-generating-music-sight-reading-exercises-using-constraint-logic-programming-in-clojure.md  2016-08-02-generating-sight-reading-exercises-using-constraint-logic-programming-in-clojure.md
_posts/generating-sight-reading-exercises/: 2016-08-02-generating-sight-reading-exercises-using-constraint-logic-programming-in-clojure-part-1.md  2016-08-07-generating-sight-reading-exercises-using-constraint-logic-programming-in-clojure-part-1.md
_sass/: _base.scss  _layout.scss  _syntax-highlighting.scss
blog/: .gitignore  Makefile  default.nix  result  shell.nix
blog/nix/: pandoc-include-code.json
blog/src/: Gemfile  Guardfile  _config.yml  _local_config.yml  about.md  blog.html  gemset.nix  keybase.txt  projects.md  writing.html
css/: main.scss  print.scss
diagrams/: .gitignore  default.nix  diagrams.cabal  result
diagrams/src/: TimelineDiagrams.hs  VideoClassifierDiagrams.hs
docs/: 404.html  Gemfile  LICENSE  Makefile  README.md  about.html  archive.html  feed.xml  index.html  sitemap.xml
docs/css/: main.css  print.css  syntax-highlighting.css
docs/generative-music/: index.html
docs/js/: comments.js
docs/programming/: index.html
filters/: default.nix  filters.cabal  result
filters/src/: UnicodeNumbers.hs
post-assets/music-clp-clojure/: groups.ly  sight-reading-example.ly
programming/: index.md
src/: 404.md  Gemfile  _config.yml  about.md  archive.html  atom.rng  blog.html  draft-header.tex  head.html  index.css  index.html  post-nav-after.html  post-nav-before.html  projects.md  reset.css  styles.iuml  talks.md  work.html  writing.html
src/_diagrams/: Square.hs  TimelineDiagrams.hs  UndoRedoDiagrams.hs  VideoClassifierDiagrams.hs
src/_drafts/: case-study-1.md  case-study-2.md  last-part.md  property-based-testing-the-ugly-parts-intro.md
src/_includes/: analytics.html  footer.html  head.html  nav.html
src/_layouts/: category.html  page.html  post.html
src/_lhs/: 2017-06-04-finally-encoding-the-purescript-spec-language.lhs  2017-06-04-finally-encoding-the-purescript-spec-language.md  2017-06-05-tagless-final-encoding-of-a-test-language.lhs  2017-06-05-tagless-final-encoding-of-a-test-language.md  2017-06-06-welcome-to-the-state-machine.lhs  2017-06-06-welcome-to-the-state-machine.md  2017-11-10-finite-state-machines-part-1-modeling-with-haskell.lhs  2017-11-10-finite-state-machines-part-1-modeling-with-haskell.md  2017-11-10-state-machines-in-haskell-part-1.lhs  2017-11-10-state-machines-in-haskell-part-1.md
src/_plugins/: Diagrams.rb  Lilypond.rb  LiterateHaskell.rb  plantuml.rb
src/_posts/: 2016-04-14-so-it-begins.markdown  2016-04-23-software-evolution-without-fear.md  2016-10-10-taking-a-break-from-oden.md  2016-10-10-taking-a-step-back-from-oden.md  2016-12-04-a-delayed-summary-of-my-trip-to-cadiz-and-lambda-world.md  2016-12-04-a-delayed-summary-of-my-trip-to-cadiz-and-lambdaworld.md  2017-01-06-hyper-elegant-weapons-for-a-more-civilized-page.md  2017-06-04-finally-encoding-the-purescript-spec-language.md  2017-06-05-tagless-final-encoding-of-a-test-language.lhs  2017-06-05-tagless-final-encoding-of-a-test-language.md  2017-06-06-welcome-to-the-state-machine.md  (+26 more)
test/: custom.utf-8.add  package-lock.json  package.json  spellcheck.ts  wordCount.ts  wordExtractor.dom.test.ts  wordExtractor.ts
(+140 files in other folders)
