name:                wickstrom-tech
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://wickstrom.tech
license:             MIT
license-file:        LICENSE
author:              Oskar Wickström
maintainer:          oskar.wickstrom@gmail.com
copyright:           Oskar Wickström
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/_posts
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , io-memoize
                     , text
  default-language:    Haskell2010

executable timeline-diagrams
  hs-source-dirs:      src/_diagrams
  main-is:             TimelineDiagrams.hs
  build-depends:       base >= 4.7 && < 5
                     , diagrams-lib
                     , diagrams-cairo
                     , diagrams-svg
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/owickstrom/func-da-world
