name:                diagrams
version:             0.1.0.0
homepage:            https://wickstrom.tech
author:              Oskar Wickström
maintainer:          oskar.wickstrom@gmail.com
copyright:           Oskar Wickström
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TimelineDiagrams
                     , VideoClassifierDiagrams
                     , UndoRedoDiagrams
  build-depends:       base >= 4.7 && < 5
                     , diagrams-lib
                     , diagrams-cairo
                     , diagrams-svg
                     , mtl
                     , io-memoize
                     , text
  default-language:    Haskell2010
