name:                filters
version:             0.1.0.0
homepage:            https://wickstrom.tech
author:              Oskar Wickström
maintainer:          oskar.wickstrom@gmail.com
copyright:           Oskar Wickström
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable unicode-numbers
  hs-source-dirs:      src
  main-is:             UnicodeNumbers.hs
  build-depends:       base >= 4.7 && < 5,
                       pcre-heavy,
                       pandoc-types >= 1.20,
                       text
  default-language:    Haskell2010